--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="jcconnect.png" alt="Project 1 Screenshot" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">E-commerce Web App</h3>
       <p>A fully functional e-commerce website with cart, checkout, and admin dashboard.</p>
-      <a href="https://jcconnects.com" target="_blank" style="color: #007bff;">View Project</a>
+      <a href="https://wowcouture.org" target="_blank" style="color: #007bff;">View Project</a>
     </div>
 
     <!-- Project 2 -->
@@ -27,7 +27,7 @@
       <img src="falex.png" alt="Project 3 Screenshot" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">fashion</h3>
       <p>A responsive blog platform with user authentication, built using wordpress and elementor.</p>
-      <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
+      <a href="https://blue-bear-507624.hostingersite.com/" target="_blank" style="color: #007bff;">View Project</a>
     </div>
 
   </div>
