--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
     <!-- Project 1 -->
     <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-      <img src="jcconnect.png" alt="Project 1 Screenshot" style="width: 100%; border-radius: 8px;">
-      <h3 style="margin-top: 15px;">E-commerce Web App</h3>
+      <img src="gadjet.png" alt="Project 1 Screenshot" style="width: 100%; border-radius: 8px;">
+      <h3 style="margin-top: 15px;">Gadjet website</h3>
       <p>A fully functional e-commerce website with cart, checkout, and admin dashboard.</p>
-      <a href="https://wowcouture.org" target="_blank" style="color: #007bff;">View Project</a>
+      <a href="https://royalblue-kangaroo-462191.hostingersite.com/" target="_blank" style="color: #007bff;">View Project</a>
     </div>
 
     <!-- Project 2 -->
     <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-      <img src="mine.png" alt="Project 2 Screenshot" style="width: 100%; border-radius: 8px;">
-      <h3 style="margin-top: 15px;">Portfolio Website</h3>
-      <p>A personal web-agency site to showcase my work and skills, built with HTML, CSS, and  JavaScript.</p>
-      <a href="https://wordpress-1443039-5401395.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
+      <img src="consultant.png" alt="Project 2 Screenshot" style="width: 100%; border-radius: 8px;">
+      <h3 style="margin-top: 15px;">consultant Website</h3>
+      <p> A high-converting website for business owners to build credibility, generate traffic, turn the traffic into paying clients</p>
+      <a href="https://startersites.io/blocksy/consultant/" target="_blank" style="color: #007bff;">View Project</a>
     </div>
 
     <!-- Project 3 -->
