--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <img src="falex.png" alt="Project 3 Screenshot" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">fashion</h3>
       <p>A responsive blog platform with user authentication, built using wordpress and elementor.</p>
-      <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
+      <a href="https://blue-bear-507624.hostingersite.com/" target="_blank" style="color: #007bff;">View Project</a>
     </div>
 
         <!-- Project 4 -->
     <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-      <img src="cosmetics.png" alt="Project 3 Screenshot" style="width: 100%; border-radius: 8px;">
+      <img src="cosmetics.png" alt="Project 4 Screenshot" style="width: 100%; border-radius: 8px;">
       <h3 style="margin-top: 15px;">cosmetics</h3>
       <p>high-converting websites cosmetics E-commerce website.</p>
       <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
@@ -40,15 +40,15 @@
 
         <!-- Project 5 -->
         <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-          <img src="photo-studio.png" alt="Project 3 Screenshot" style="width: 100%; border-radius: 8px;">
-          <h3 style="margin-top: 15px;">fashion</h3>
+          <img src="photo-studio.png" alt="Project 4 Screenshot" style="width: 100%; border-radius: 8px;">
+          <h3 style="margin-top: 15px;">photo-studio</h3>
           <p>A responsive blog platform with user authentication, built using wordpress and elementor.</p>
           <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
         </div>
 
         <!-- Project 6 -->
         <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-          <img src="ngo.png" alt="Project 3 Screenshot" style="width: 100%; border-radius: 8px;">
+          <img src="ngo.png" alt="Project 6 Screenshot" style="width: 100%; border-radius: 8px;">
           <h3 style="margin-top: 15px;">Potters girl initiative </h3>
           <p>An N.G.O that helps teenage girls </p>
           <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
