--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="ngo.png" alt="Project 6 Screenshot" style="width: 100%; border-radius: 8px;">
           <h3 style="margin-top: 15px;">Potters girl initiative </h3>
           <p>An N.G.O that helps teenage girls </p>
-          <a href="https://wordpress-1443037-5401391.cloudwaysapps.com/" target="_blank" style="color: #007bff;">View Project</a>
+          <a href="thepottersgirlinitiative.org" target="_blank" style="color: #007bff;">View Project</a>
         </div>
     
     
