--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Project 5 -->
         <div style="background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
-          <img src="photo-studio.png" alt="Project 4 Screenshot" style="width: 100%; border-radius: 8px;">
+          <img src="cleaners.png" alt="Project 4 Screenshot" style="width: 100%; border-radius: 8px;">
           <h3 style="margin-top: 15px;">detailers</h3>
           <p>A high converting website, built for detailers.</p>
           <a href="https://darkslategrey-seal-755079.hostingersite.com/" target="_blank" style="color: #007bff;">View Project</a>
